Some patches from David Crossley [crossley@indexgeo.com.au]
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7065 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -15,7 +15,7 @@
   Why?
   ----
   
-  If you ever partecipated in ASF open development you know why: there is always
+  If you ever participated in ASF open development you know why: there is always
   the feeling that you are left on your own, that each project, effort, 
   community mail list and invidual has to struggle to keep up with the others 
   and to keep coherence.
@@ -28,18 +28,18 @@
   ---------------------------------------------------------
   
   Ever seen 'sourceforge'? ok, than you know what a technological 
-  instrastructure for open development is. Ever seen Mozilla's 'tinkerbox' and 
+  insfrastructure for open development is. Ever seen Mozilla's 'tinkerbox' and 
   'bonsai'? ok, then you know what we mean for 'helping tools'.
   
-  Take all the wishes/dreams that you ever had when you were partecipating in
-  a OSS community... well, we want Forrest to make them possible.
+  Take all the wishes/dreams that you ever had when you were participating in
+  an OSS community... well, we want Forrest to make them possible.
   
 
   Why the name 'Forrest'?
   -----------------------
   
   Oh, long story, but mainly out of the movie 'Forrest Gump', mostly
-  to indicate that even dump and simple things can go a long way if done 
+  to indicate that even dumb and simple things can go a long way when done 
   by heart.  
 
 
