Perhaps Forrest can stop dreaming and get on with the job :-)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7122 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -7,9 +7,9 @@
   What is this?
   -------------
 
-  Forrest is a mostly a dream:  create a good technological infrastructure for
-  open software development for the Apache Software Foundation based on ASF
-  software, ASF practices and experience and modern software design principles.
+  Forrest provides a sound technological infrastructure for open software
+  development for the Apache Software Foundation based on ASF software,
+  ASF practices and experience, and modern software design principles.
   
   
   Why?
