--- a/README
+++ b/README
@@ -67,6 +67,14 @@
   The entire thing will be licensed with the Apache License. See the /legal
   directory for more information.
   
+
+  Getting started
+  ---------------
+
+  After you have downloaded the xml-forrest source, you can build the main
+  Forrest documentation ...
+  UNIX: ./build.sh docs Windows: build docs
+  The HTML documents are then generated in ./build/xml-forrest/docs/
   
   Can I help?
   -----------
