updated the readme (forrest is *not* about doing a code build system! who wrote that?)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7250 13f79535-47bb-0310-9956-ffa450edef68

--- a/README
+++ b/README
@@ -49,9 +49,9 @@
   The first development phase will bring:
   
    - a publishing system for documentation
-   - a build system for code
    - analysis of logs and publishing of results
-
+   
+  Later phases will be decided after we reach this minimum functionality.
 
  
   Will I be able to use Forrest on my own sites?
@@ -73,8 +73,12 @@
 
   After you have downloaded the xml-forrest source, you can build the main
   Forrest documentation ...
-  UNIX: ./build.sh docs Windows: build docs
+  
+        UNIX:     ./build.sh docs 
+        Windows:  build docs
+        
   The HTML documents are then generated in ./build/xml-forrest/docs/
+
   
   Can I help?
   -----------
