Add a DISPLAY for cocoondev
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7843 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/scripts/local-vars-cocoondev.org
+++ b/src/resources/forrestbot/scripts/local-vars-cocoondev.org
@@ -6,3 +6,4 @@ BASE=/home/j/jeffturner/forrestbot
 WEBAPP=/www/forrestbot.cocoondev.org/webapps/ROOT
 XML_SITE=/home/j/jeffturner/xml-site
 TIMEOUT=$[10*60]
+export DISPLAY=:0
