Explain that they can use other DTDs for their project.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7850 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/schema/README
+++ b/src/resources/schema/README
@@ -20,3 +20,6 @@ same entities).
 This has been used instead of DocBook to simplify the learning effort but still
 remove all the unstructured elements of XHTML.
 
+Your project can use whatever other DTDs that you may need. Just declare your
+"project.catalog" file location using forrest.properties
+
