Oops, switch on Forrest regeneration
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7949 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/scripts/local-vars-cocoondev.org
+++ b/src/resources/forrestbot/scripts/local-vars-cocoondev.org
@@ -7,4 +7,5 @@ FORREST=/usr/serverlocal/src/apache/xml-forrest
 WEBAPP=/www/forrestbot.cocoondev.org/webapps/ROOT
 XML_SITE=/home/j/jeffturner/xml-site
 TIMEOUT=$[10*60]
+REGEN_FORREST=true
 export DISPLAY=:0
