Reflect reality on cocoondev
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8009 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/scripts/local-vars-cocoondev.org
+++ b/src/resources/forrestbot/scripts/local-vars-cocoondev.org
@@ -27,7 +27,7 @@ TIMEOUT=$[10*60]
 # Set this to true if you want to delete any local mods to the $FORREST and
 # update from CVS.  Not recommended unless scripts/ is moved outside the
 # xml-forrest CVS hierarchy. Defaults to false
-REGEN_FORREST=false
+REGEN_FORREST=true
 
 # In a headless environment like your typical Unix box (not running X), you
 # should install Xvfb, and set this DISPLAY variable appropriately. No default.
