Attempt avalon-site commit support
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8164 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/scripts/local-vars-cocoondev.org
+++ b/src/resources/forrestbot/scripts/local-vars-cocoondev.org
@@ -19,6 +19,7 @@ WEBAPP=/www/forrestbot.cocoondev.org/webapps/ROOT
 # If you want the 'publish_livesite' command to work, you must set XML_SITE to
 # point to a CVS checkout of the xml-site module.
 XML_SITE=/home/j/jeffturner/xml-site
+AVALON_SITE=/home/j/jeffturner/avalon-site
 
 # Max number of seconds we expect a full forrestbot run to take, before we
 # assume something's hung and kill the processes.  Defaults to 20 minutes.
