Mods made on cocoondev to use v0.4 for most sites
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8402 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/scripts/local-vars-cocoondev.org
+++ b/src/resources/forrestbot/scripts/local-vars-cocoondev.org
@@ -10,7 +10,8 @@ BASE=/usr/serverlocal/forrestbot/scripts
 # (optionally) 'cvs update'ed and rebuilt on every run.  Defaults to
 # $BASE/../../../../ ie, assuming the user is in
 # xml-forrest/src/resources/forrestbot/scripts/
-FORREST=/usr/serverlocal/src/apache/xml-forrest
+#FORREST=/usr/serverlocal/src/apache/xml-forrest
+FORREST=/usr/serverlocal/src/apache/xml-forrest-0.4
 
 # Assuming the overseer command is being fed instructions from the webapp, this
 # variable points to the webapp context root.  Defaults to $BASE/../webapp
@@ -28,7 +29,7 @@ TIMEOUT=$[10*60]
 # Set this to true if you want to delete any local mods to the $FORREST and
 # update from CVS.  Not recommended unless scripts/ is moved outside the
 # xml-forrest CVS hierarchy. Defaults to false
-REGEN_FORREST=true
+REGEN_FORREST=false
 
 # In a headless environment like your typical Unix box (not running X), you
 # should install Xvfb, and set this DISPLAY variable appropriately. No default.
