Improved translation for "virtuous" Italians.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8758 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/src/documentation/translations/menu_it.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_it.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
   <catalogue xml:lang="it">
-     <message key="About">Circa</message>
+     <message key="About">Riguardo a</message>
      <message key="Index">Indice</message>
      <message key="Changes">Cambiamenti</message>         
      <message key="Todo">Cose da fare</message>         
