Added as suggested by Antonio Gallardo.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8763 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/src/documentation/translations/menu_es.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_es.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <catalogue xml:lang="es" >
-  <message key="About">Sobre</message >
+  <message key="About">Acerca de</message >
   <message key="Index">Indice</message >
   <message key="Changes">Cambios</message>
   <message key="Todo" >Cosas que hacer</message>
