Point them to some documentation.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8768 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/schema/README
+++ b/src/resources/schema/README
@@ -22,4 +22,5 @@ remove all the unstructured elements of XHTML.
 
 Your project can use whatever other DTDs that you may need. Just declare your
 "project.catalog" file location using forrest.properties
+See the documents "your-project.html" and "validation.html".
 
