Added default translation. Added German translation (Submitted by: Jan.Materne). Fixed key label after DC modify site.xml labels breaking all translations.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8852 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/src/documentation/translations/menu_es.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_es.xml
@@ -5,12 +5,12 @@
     <message key="Changes">Cambios</message>
     <message key="Todo">Tareas pendientes</message>
     <message key="Samples">Ejemplos</message>
-    <message key="Apache document page">Página documento Apache</message>
+    <message key="Apache document">Documento Apache</message>
     <message key="Static content">Contenido Estatico</message>
     <message key="Wiki page">Página Wiki</message>
     <message key="ihtml page">Página ihtml</message>
     <message key="ehtml page">Página ehtml</message>
     <message key="FAQ">Preguntas Frecuentes</message>
-    <message key="Simplifed Docbook page">Página Simplifed Docbook</message>
+    <message key="Simplifed Docbook">Página Simplifed Docbook</message>
     <message key="XSP page">Página XSP</message>
 </catalogue>
