--- a/src/resources/fresh-site/src/documentation/translations/menu_af.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_af.xml
@@ -5,12 +5,12 @@
     <message key="Changes">Veranderinge</message>
     <message key="Todo">Om te doen</message>
     <message key="Samples">Voorbeelde</message>
-    <message key="Apache document page">Apache dokument bladsy</message>
+    <message key="Apache document">Apache dokument</message>
     <message key="Static content">Statise Inhoud</message>
     <message key="Wiki page">Wiki bladsy</message>
     <message key="ihtml page">Ihtml bladsy</message>
     <message key="ehtml page">Ehtml bladsy</message>
     <message key="FAQ">FAQ</message>
-    <message key="Simplifed Docbook page">Vereenvoudigde Docbook bladsy</message>
+    <message key="Simplifed Docbook">Vereenvoudigde Docbook</message>
     <message key="XSP page">XSP bladsy</message>
 </catalogue>
