--- a/src/resources/fresh-site/src/documentation/translations/menu_it.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_it.xml
@@ -5,12 +5,12 @@
     <message key="Changes">Cambiamenti</message>
     <message key="Todo">Cose da fare</message>
     <message key="Samples">Esempi</message>
-    <message key="Apache document page">Pagina Apache document</message>
+    <message key="Apache document">Apache document</message>
     <message key="Static content">Contenuto Statico</message>
     <message key="Wiki page">Pagina Wiki</message>
     <message key="ihtml page">Pagina ihtml</message>
     <message key="ehtml page">Pagina ehtml</message>
     <message key="FAQ">Domande frequenti</message>
-    <message key="Simplifed Docbook page">Pagina Simplifed Docbook</message>
+    <message key="Simplifed Docbook">Simplifed Docbook</message>
     <message key="XSP page">Pagina XSP</message>
 </catalogue>
