--- a/src/resources/fresh-site/src/documentation/translations/menu_es.xml
+++ b/src/resources/fresh-site/src/documentation/translations/menu_es.xml
@@ -6,7 +6,7 @@
     <message key="Todo">Tareas pendientes</message>
     <message key="Samples">Ejemplos</message>
     <message key="Apache document">Documento Apache</message>
-    <message key="Static content">Contenido Estatico</message>
+    <message key="Static content">Contenido Estático</message>
     <message key="Wiki page">Página Wiki</message>
     <message key="ihtml page">Página ihtml</message>
     <message key="ehtml page">Página ehtml</message>
