The "Linking" item was added to the menu. Added a default entry for all languages, but we need translations.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36147 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/src/documentation/translations/menu_af.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_af.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Voorbeelde</message>
     <message key="Apache document">Apache dokument</message>
     <message key="Static content">Statise Inhoud</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Wiki bladsy</message>
     <message key="ihtml page">Ihtml bladsy</message>
     <message key="ehtml page">Ehtml bladsy</message>
