--- a/src/core/fresh-site/src/documentation/translations/menu_es.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_es.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Ejemplos</message>
     <message key="Apache document">Documento Apache</message>
     <message key="Static content">Contenido Estático</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Página Wiki</message>
     <message key="ihtml page">Página ihtml</message>
     <message key="ehtml page">Página ehtml</message>
