--- a/src/core/fresh-site/src/documentation/translations/menu_it.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_it.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Esempi</message>
     <message key="Apache document">Apache document</message>
     <message key="Static content">Contenuto Statico</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Pagina Wiki</message>
     <message key="ihtml page">Pagina ihtml</message>
     <message key="ehtml page">Pagina ehtml</message>
