--- a/src/core/fresh-site/src/documentation/translations/menu_ru.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_ru.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Примеры</message>
     <message key="Apache document">Страница документа Apache</message>
     <message key="Static content">Статическое содержание</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Страница Wiki</message>
     <message key="ihtml page">Страница ihtml</message>
     <message key="ehtml page">Страница ehtml</message>
