--- a/src/core/fresh-site/src/documentation/translations/menu.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu.xml
@@ -22,6 +22,7 @@
   <message key="Samples">Samples</message>
   <message key="Apache document">Apache document</message>
   <message key="Static content">Static content</message>
+  <message key="Linking">Linking</message>
   <message key="Wiki page">Wiki page</message>
   <message key="ihtml page">Ihtml page</message>
   <message key="ehtml page">Ehtml page</message>
