--- a/src/core/fresh-site/src/documentation/translations/menu_de.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_de.xml
@@ -22,6 +22,7 @@
   <message key="Samples">Beispiele</message>
   <message key="Apache document">Apache Dokumentationsseite</message>
   <message key="Static content">Statischer Inhalt</message>
+  <message key="Linking">Linking</message>
   <message key="Wiki page">Wiki Seite</message>
   <message key="ihtml page">ihtml Seite</message>
   <message key="ehtml page">ehtml Seite</message>
