--- a/src/core/fresh-site/src/documentation/translations/menu_no.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_no.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Eksempler</message>
     <message key="Apache document">Apache Dokument</message>
     <message key="Static content">Statisk innhold</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Wiki side</message>
     <message key="ihtml page">ihtml side</message>
     <message key="ehtml page">ehtml side</message>
