--- a/src/core/fresh-site/src/documentation/translations/menu_sk.xml
+++ b/src/core/fresh-site/src/documentation/translations/menu_sk.xml
@@ -22,6 +22,7 @@
     <message key="Samples">Príklady</message>
     <message key="Apache document">Apache Document</message>
     <message key="Static content">Statický Obsah</message>
+    <message key="Linking">Linking</message>
     <message key="Wiki page">Wiki stránka</message>
     <message key="ihtml page">ihtml stránka</message>
     <message key="ehtml page">ehtml stránka</message>
