Fix typos in spanish translation
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@106841 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/fresh-site/src/documentation/translations/languages_es.xml
+++ b/main/fresh-site/src/documentation/translations/languages_es.xml
@@ -15,7 +15,7 @@
   limitations under the License.
 -->
 <catalogue xml:lang="es">
-  <message key="en">Ingles</message>
-  <message key="es">Espanol</message>
-  <message key="nl">Holandes</message>
+  <message key="en">Inglés</message>
+  <message key="es">Español</message>
+  <message key="nl">Holandés</message>
 </catalogue>
