--- a/plugins/text-output/src/documentation/translations/languages_es.xml
+++ b/plugins/text-output/src/documentation/translations/languages_es.xml
@@ -15,7 +15,7 @@
   limitations under the License.
 -->
 <catalogue xml:lang="es">
-  <message key="en">Ingles</message>
-  <message key="es">Espanol</message>
-  <message key="nl">Holandes</message>
+  <message key="en">Inglés</message>
+  <message key="es">Español</message>
+  <message key="nl">Holandés</message>
 </catalogue>
