Publish recent changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@161382 13f79535-47bb-0310-9956-ffa450edef68

--- a/0.7/docs/document-v13.pod
+++ b/0.7/docs/document-v13.pod
@@ -24,7 +24,7 @@ This is a demonstration document using all possible elements in the current Apac
 
 =head2 Sample Content
 
-B<Hint: > See the xml source to see how the various elements are used and see the L<DTD documentation|dtd-docs> . 
+B<Hint: > See the xml source to see how the various elements are used and see the L<DTD reference documentation|../docs/dtd-docs> . 
 
 
 
@@ -426,7 +426,7 @@ And a C<<figure> > to end all of this. Note that this can also be implemented wi
 
 =head2 DTD changes
 
-See the generated L<DTD documentation|dtd-docs> . 
+See the generated L<DTD reference documentation|../docs/dtd-docs> . 
 
 
 
