--- a/0.7/docs/document-v20.pod
+++ b/0.7/docs/document-v20.pod
@@ -24,7 +24,7 @@ This is a demonstration document using all possible elements in the current Apac
 
 =head2 Sample Content
 
-B<Hint: > See the xml source to see how the various elements are used and see the L<DTD documentation|dtd-docs> . 
+B<Hint: > See the xml source to see how the various elements are used and see the L<DTD reference documentation|../docs/dtd-docs> . 
 
 
 
@@ -437,7 +437,7 @@ The document-v13 had elements <fork> and <jump>. In document-v20, those elements
 
 =head2 DTD changes
 
-See the generated L<DTD documentation|dtd-docs> . 
+See the generated L<DTD reference documentation|../docs/dtd-docs> . 
 
 
 
